--- a/web/_includes/less/styles/_hero.less
+++ b/web/_includes/less/styles/_hero.less
@@ -81,31 +81,13 @@ span>span {
   background-size: cover;
 }
 
-.hero--image-001 {
-// We use the longhand declaration to stop conflict with `.hero--image`
-  background-image: url(../../media/hero/event_2013_001.jpg);
+.hero__logo {
+  display: table;
+  height: 100%;
 }
 
-.hero--image-002 {
-  background-image: url(../../media/hero/2014-community-award.jpg);
-}
-
-.hero--image-003 {
-  background-image: url(../../media/hero/nominate_2015_002.jpg);
-}
-
-.hero--image-004 {
-  background-image: url(../../media/hero/ceremony_2015_001.jpg);
-}
-
-.hero--image-005 {
-  background-image: url(../../media/hero/sponsors_2015_001.jpg);
-}
-
-.hero--image-006 {
-  background-image: url(../../media/hero/contact_2015_001.jpg);
-}
-
-.hero--image-007 {
-  background-image: url(../../media/hero/2014-logo.jpg);
+.hero__brand {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
