--- a/web/_includes/templates/header.html
+++ b/web/_includes/templates/header.html
@@ -2,7 +2,7 @@
   <div class="wrapper__sub">
 
     <div class="header__brand header__left ls-hidden">
-      <img class="image__responsive" src="{{ site.static }}/gui/logo-small_coventry-sports-awards_2014.svg" alt="Coventry Sports Awards 2015">
+      <img class="image__responsive" src="{{ site.static }}/gui/logo_small_coventry-sports-awards_2015.svg" alt="Coventry &amp; Warwickshrie Sports Awards 2015">
     </div>
 
     <nav role="navigation" class="nav__main">
@@ -23,8 +23,8 @@
 
   <div class="wrapper__sub hero__image hero--image-{{ page.hero.image }}">
 
-  <section class="ss-hidden ms-hidden ls1-ls4">
-      <img class="image__responsive" src="{{ site.static }}/gui/logo_coventry-sports-awards_2014.svg" alt="Coventry Sports Awards 2015">
+  <section class="ss-hidden ms-hidden ls1-ls5 hero__logo">
+      <img class="image__responsive hero__brand" src="{{ site.static }}/gui/logo_coventry-sports-awards_2015.svg" alt="Coventry &amp; Warwickshrie Sports Awards 2015">
   </section>
 
   <!--<section class="hero__sponsor grid ss1-ss4 ms1-ms6 ls9-ls12">
