Update hero images

--- a/web/_includes/less/styles/_hero.less
+++ b/web/_includes/less/styles/_hero.less
@@ -73,14 +73,6 @@ span>span {
 
 }
 
-
-/*  Hero Images  */
-
-.hero--image {
-  background-position: center top;
-  background-size: cover;
-}
-
 .hero__logo {
   display: table;
   height: 100%;
@@ -90,4 +82,36 @@ span>span {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
+}
+
+/*  Hero Images  */
+
+.hero--image {
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero--image-001 {
+  background-image: url('../../media/hero/hero_2014-002.jpg');
+}
+
+.hero--image-002 {
+  background-image: url('../../media/hero/hero_2014-winners-001.jpg');
+}
+
+.hero--image-003 {
+  background-image: url('../../media/hero/hero_2014-001.jpg');
+}
+
+.hero--image-004 {
+  background-image: url('../../media/hero/hero_2014-winners-002.jpg');
+}
+
+.hero--image-005 {
+  background-image: url('../../media/hero/hero_2014-003.jpg');
+}
+
+.hero--image-006 {
+  background-image: url('../../media/hero/hero_2014-004.jpg');
 }
