Add home link to main navigation

--- a/web/_includes/templates/header.html
+++ b/web/_includes/templates/header.html
@@ -10,6 +10,9 @@
       <button role="hidden" id="js-menu__icon" class="navicon navicon__right ls-hidden">Menu</button>
 
       <ul id="js-nav__main" class="nav__main__right list menu">
+        <li>
+          <a class="nav--home" href="{{ site.url }}/">Home</a>
+        </li>
       {% include templates/navigation.html %}
       </ul>
 
