--- a/web/_includes/templates/favicon.html
+++ b/web/_includes/templates/favicon.html
@@ -1,5 +1,5 @@
 <!--  Favicon  -->
-<!--<link rel="shortcut icon" href="{{ site.static }}/gui/favicon.png" type="image/png">-->
+<link rel="shortcut icon" href="{{ site.static }}/gui/favicon.png" type="image/png">
 <link rel="shortcut icon" href="{{ site.static }}/gui/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="{{ site.static }}/gui/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site.static }}/gui/apple-touch-icon-72x72.png">
