Update Twitter feed hashtag to #CWSA2015

--- a/web/_includes/templates/sidebar.html
+++ b/web/_includes/templates/sidebar.html
@@ -16,9 +16,9 @@
 
 <article class="box separator--horizontal">
 
-  <h2 class="heading--sub"><img class="image__responsive icon" src="{{ site.static }}/gui/icon_twitter.png" alt="">#COVCHAMPS</h2>
+  <h2 class="heading--sub"><img class="image__responsive icon" src="{{ site.static }}/gui/icon_twitter.png" alt="">#CWSA2015</h2>
 
-  <a class="twitter-timeline" href="https://twitter.com/search?q=%23covchamps+from%3Abirminghampost+OR+from%3Abirminghammail+OR+from%3AChampionsUKplc+OR+from%3Acovtelegraph" data-widget-id="484674121347788801">Tweets about the Coventry &amp; Warwickshire Sports Awards</a>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  <a class="twitter-timeline" href="https://twitter.com/search?q=%23CWSA2015%20from%3Abirminghampost%20OR%20from%3Abirminghammail%20OR%20from%3A%20ChampionsUKplc%20OR%20from%3Acovtelegraph" data-widget-id="609324085408088064">Tweets about the Coventry &amp; Warwickshire Sports Awards</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </article>
